add alt to img tag

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="main">
   <div class="profile">
     <div class="profile-header"></div>
-    <img src="images/image-victor.jpg" class="profile-picture">
+    <img src="images/image-victor.jpg" class="profile-picture" alt="Victors profile picture">
   <div class="profile-personalData">
     <h3 class="profile-name fontDark">Victor Crest</h3>
     <div class="profile-age fontLight">26</div>
